# Combobulating

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  codeql.yml
agents/core/: requirements-ci.txt  requirements.txt
apps/ios/: README.md  SCREENS.md
benchmarks/: README.md  __init__.py  _common.py  latency.py  memory_footprint.py  orchestrator_throughput.py  run_all.py
deck/phase3_pitch/: README.md  qa_bank_extended.md  run_of_show.md  spec.md
demo/: fallback_plan.md
design/architecture/: README.md  mermaid_config.json  mermaid_config_dark.json
design/prompts/: aura_images.json
docs/decisions/: ADR-0011-no-apple-developer-program.md  README.md
docs/site/: 404.html  README.md  index.html  style.css
e2e/: README.md  __init__.py  conftest.py  test_monday_brief_e2e.py  test_quiet_group_chat_e2e.py  test_spend_mirror_e2e.py
hf_space/: Dockerfile  README.md  app.py  requirements.txt  style.css
orchestrator/: policy.py
phase2/: README.md  checklist.md
phase2/deliverables/: 01_pilot_report.md  02_lora_adapters_README.md  03_galaxy_emulator_demo.md  04_threat_model_validation.md  05_silence_budget_kpi.md
phase3/: README.md  contingency_kit.md  judge_research.md  post_event_followups.md  stage_kit.md  travel_logistics.md
pilot/: CONSENT_v2.md  data_handling.md  lab_study_logistics.md  qual_protocol.md  sideload_guide.md  wizard_of_oz_protocol.md
pilot/analysis/: requirements.txt
scripts/: resign_aura.sh  run_all_tests.sh  validate_deck.py
web/: README.md  run_local.sh
web/api/: main.py  requirements.txt
web/web/: app.js  (+2 more)
(+8 files in other folders)
