[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --tb=short"
testpaths = ["agents", "orchestrator", "memory", "e2e"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# importmode=importlib bypasses the legacy import path that conflicts with
# Python's stdlib `calendar` module when our agents/calendar/ tests are
# collected alongside other agent dirs.
[tool.pytest.ini_options.markers]
slow = "marks tests as slow (deselect with -m 'not slow')"

[tool.pytest]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura"
version = "0.1.0"
description = "Aura — on-device multi-agent empathetic intelligence layer"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Shaurya Punj", email = "spunj_be23@thapar.edu"},
    {name = "Shorya Gupta", email = "sgupta9_be24@thapar.edu"},
]
